syntax = "proto3";

package snapshot;

option go_package = "pulsardb/internal/transport/gen/snapshot";

message KeyValue {
  string key = 1;
  Value value = 2;
}

message Value {
  oneof kind {
    string string_value = 1;
    int64 int64_value = 2;
    double float64_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
  }
}

message KVSnapshot {
  repeated KeyValue entries = 1;
}